--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 dependencies = [
     "scrapybara>=2.4.1",
     "undetected-playwright-patch>=1.40.0.post1700587210000",
+    "python-dotenv>=1.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
